--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </head>
   <body>
     <div class="content">
-      <img src="/logo.png" alt="" class="logo"/>
+      <img src="./logo.png" alt="" class="logo"/>
       <h1>Ribbit Frog installer</h1>
 
       <p class="button-row" align="center">
