some small changes based on damien's comments

--- a/modules/ribbit/sensor-ui/index.html
+++ b/modules/ribbit/sensor-ui/index.html
@@ -280,7 +280,7 @@
             return ret;
         }
 
-        const registryPath = getRoute('/api/registry');
+        const registryPath = getRoute('/api/config');
         fetch(registryPath)
         .then(response => response.json())
         .then(data => {
